<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="student.rachel.stylish.fragment.cart.checkout.CheckoutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/payment_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/payment_detail"
            android:textColor="@color/color3f3a3a"
            android:textSize="@dimen/size18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/pay_method"
            android:fontFamily="@font/noto_sans"
            android:prompt="@string/payment_title"
            android:spinnerMode="dialog"
            android:paddingStart="@dimen/size12"
            android:paddingTop="@dimen/size16"
            android:paddingBottom="@dimen/size16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/payment_info"
            app:layout_constraintTop_toBottomOf="@+id/payment_info" />

        <TextView
            android:id="@+id/product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/product_total_amount"
            android:textColor="@color/color646464"
            android:textSize="@dimen/size16"
            app:layout_constraintStart_toStartOf="@+id/payment_info"
            app:layout_constraintTop_toBottomOf="@+id/credit_card" />

        <TextView
            android:id="@+id/shipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/shipment_total_amount"
            android:textColor="@color/color646464"
            android:textSize="@dimen/size16"
            app:layout_constraintStart_toStartOf="@+id/payment_info"
            app:layout_constraintTop_toBottomOf="@+id/product" />

        <TextView
            android:id="@+id/product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:priceNT="@{viewModel.totalPrice}"
            android:textColor="@color/color3f3a3a"
            android:textSize="@dimen/size16"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/product" />

        <TextView
            android:id="@+id/shipment_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:priceNT="@{viewModel.shipmentFee}"
            android:textColor="@color/color3f3a3a"
            android:textSize="@dimen/size16"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/shipment" />

        <View
            android:id="@+id/view_color"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@color/color3f3a3a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shipment">

        </View>

        <TextView
            android:id="@+id/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:itemCount="@{viewModel.accumulatedProductAmount}"
            android:text="@string/total_amount"
            android:textColor="@color/colorffffff"
            android:textSize="@dimen/size16"
            app:layout_constraintBottom_toBottomOf="@+id/view_color"
            app:layout_constraintStart_toStartOf="@+id/payment_info"
            app:layout_constraintTop_toTopOf="@+id/view_color" />

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:priceNT="@{viewModel.totalPriceWithShipment}"
            android:textColor="@color/colorffffff"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/total" />

        <Button
            android:id="@+id/button_ready_checkout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:background="@color/color3f3a3a"
            android:fontFamily="@font/noto_sans"
            android:text="@string/ready_checkout"
            android:textColor="@color/colorffffff"
            android:textSize="@dimen/size16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="6.8333"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_color" />

        <tech.cherri.tpdirect.api.TPDForm
            android:id="@+id/credit_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/payment_info"
            app:layout_constraintTop_toBottomOf="@+id/spinner"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>